--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "mongoose": "^6.2.11",
     "pug": "^3.0.2",
     "request-ip": "^2.1.3",
+    "dotenv": "^16.0.0",
     "simple-notify": "^0.5.5"
-  },
-  "devDependencies": {
-    "dotenv": "^16.0.0"
   },
   "scripts": {
     "start": "node index.js",
