--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "@slack/socket-mode": "^1.2.0",
     "@slack/web-api": "^6.7.1",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-useragent": "^1.0.15",
     "moment": "^2.29.3",
     "mongoose": "^6.2.11",
+    "nodejs-publicip": "^2.1.2",
+    "nodemon": "^2.0.16",
     "pug": "^3.0.2",
     "request-ip": "^2.1.3",
-    "dotenv": "^16.0.0",
     "simple-notify": "^0.5.5"
   },
   "scripts": {
